// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-columns-container columnsCount 2 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            bread
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            tomato
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 2 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 6px; width: 50%; overflow-wrap: break-word;"
          >
            bread
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 6px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            tomato
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 33.3333%; overflow-wrap: break-word;"
          >
            bread
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 33.3333%; overflow-wrap: break-word;"
          >
            tomato
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 33.3333%; overflow-wrap: break-word;"
          >
            lettuce
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 8px; width: 33.3333%; overflow-wrap: break-word;"
          >
            bread
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 4px; padding-right: 4px; width: 33.3333%; overflow-wrap: break-word;"
          >
            tomato
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 8px; padding-right: 0px; width: 33.3333%; overflow-wrap: break-word;"
          >
            lettuce
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 4 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 25%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 25%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 25%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 25%; overflow-wrap: break-word;"
          >
            d
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 4 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 9px; width: 25%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 3px; padding-right: 6px; width: 25%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 6px; padding-right: 3px; width: 25%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 9px; padding-right: 0px; width: 25%; overflow-wrap: break-word;"
          >
            d
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 5 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            d
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            e
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 5 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 16px; width: 20%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 4px; padding-right: 12px; width: 20%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 8px; padding-right: 8px; width: 20%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 12px; padding-right: 4px; width: 20%; overflow-wrap: break-word;"
          >
            d
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 16px; padding-right: 0px; width: 20%; overflow-wrap: break-word;"
          >
            e
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 6 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            d
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            e
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            f
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 6 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 20px; width: 16.6667%; overflow-wrap: break-word;"
          >
            a
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 4px; padding-right: 16px; width: 16.6667%; overflow-wrap: break-word;"
          >
            b
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 8px; padding-right: 12px; width: 16.6667%; overflow-wrap: break-word;"
          >
            c
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 12px; padding-right: 8px; width: 16.6667%; overflow-wrap: break-word;"
          >
            d
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 16px; padding-right: 4px; width: 16.6667%; overflow-wrap: break-word;"
          >
            e
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 20px; padding-right: 0px; width: 16.6667%; overflow-wrap: break-word;"
          >
            f
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with RGBA background color 1`] = `
<DocumentFragment>
  <div
    style="background-color: rgba(0, 0, 255, 0.502);"
  >
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            col1
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            col2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with content alignment 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            short
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            tall content that takes more space
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with default values 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          />
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with fixed widths 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 200px; overflow-wrap: break-word;"
          >
            fixed
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; overflow-wrap: break-word;"
          >
            flexible
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 150px; overflow-wrap: break-word;"
          >
            third
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with style padding 1`] = `
<DocumentFragment>
  <div
    style="background-color: rgb(238, 238, 238); padding: 16px 24px 16px 24px;"
  >
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="width: 100%; table-layout: fixed; border-collapse: collapse;"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            col1
          </td>
          <td
            style="box-sizing: border-box; vertical-align: middle; padding-left: 0px; padding-right: 0px; width: 50%; overflow-wrap: break-word;"
          >
            col2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
